blog section resolved on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1316,17 +1316,19 @@ nav {
   .testimonial {
     margin: 4rem 0; }
     .testimonial_container {
-      border: 0.7rem solid #FF5253; }
+      border: none; }
     .testimonial_card {
       padding: 3rem;
-      transform: translate(1.5rem, 1.5rem); }
+      transform: translate(0, 0); }
       .testimonial_card--company {
         font-size: 2.2rem; }
       .testimonial_card--comment {
         font-size: 1.3rem; }
+        .testimonial_card--comment-text {
+          padding: 0 .5rem; }
         .testimonial_card--comment .right-quote img, .testimonial_card--comment .left-quote img {
-          width: 2rem;
-          height: 1.5rem; }
+          width: 1.5rem;
+          height: 1rem; }
       .testimonial_card--name {
         margin: 3rem 0 4rem 0;
         font-size: 1.5rem; }
@@ -1376,7 +1378,28 @@ nav {
     border-width: 1.8rem 1.6rem 1.8rem 0;
     border-color: transparent #fff transparent transparent; }
   .expertise__areas {
-    grid-template-columns: 1fr; } }
+    grid-template-columns: 1fr; }
+  .blog .section-header {
+    margin-bottom: 3rem; }
+  .blog__content {
+    display: flex;
+    flex-direction: column; }
+    .blog__content:not(:last-child) {
+      margin-bottom: 5rem; }
+    .blog__content--thumbnail {
+      display: none; }
+    .blog__content--frame {
+      border: 0.5rem solid #FF5253;
+      width: calc(100% - 2rem);
+      height: 35rem; }
+      .blog__content--frame img {
+        width: 100%;
+        height: 100%;
+        transform: translate(0, 0); }
+    .blog__content--frame2 img {
+      transform: translate(0, 0); }
+    .blog__content--description {
+      margin-bottom: 1.5rem; } }
 
 @media only screen and (max-width: 680px) {
   .header {
